--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,17 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_drawable"
-    tools:context=".LoginActivity">
-
-    <ImageView
-        android:id="@+id/ngobrolIcon"
-        android:layout_width="300px"
-        android:layout_height="300px"
-        android:src="@drawable/ngobrolkuy_icon"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="32dp"/>
+    tools:context=".ForgetPassword">
 
     <LinearLayout
         android:id="@+id/ngobrolKuyTitle"
@@ -29,21 +19,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ngobrol"
-            android:textSize="16pt"
+            android:text="Pulihkan Password"
+            android:textSize="22pt"
             android:fontFamily="@font/redhatdisplay_regular"
             android:textStyle="bold"
-            android:textColor="@color/white"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="Kuy"
-            android:textSize="16pt"
-            android:fontFamily="@font/redhatdisplay_regular"
-            android:textStyle="bold"
-            android:textColor="@color/pink"/>
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:layout_marginTop="32dp"/>
 
     </LinearLayout>
 
@@ -63,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Username"
+            android:text="Email"
             android:textSize="12pt"
             android:fontFamily="@font/redhatdisplay_regular"
             android:textStyle="bold"
@@ -76,55 +58,16 @@
             android:backgroundTint="@color/white">
 
             <EditText
-                android:id="@+id/etUsername"
+                android:id="@+id/etEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:hint="Masukkan username Anda"
+                android:hint="Masukkan email Anda"
                 android:textColor="@color/light_gray"
                 android:textSize="8pt"
                 android:background="@android:color/transparent"/>
 
         </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_marginTop="32dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="Password"
-            android:textSize="12pt"
-            android:fontFamily="@font/redhatdisplay_regular"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:cardCornerRadius="40dp"
-            android:backgroundTint="@color/white">
-
-            <EditText
-                android:id="@+id/etPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:hint="Masukkan password Anda"
-                android:textColor="@color/light_gray"
-                android:textSize="8pt"
-                android:background="@android:color/transparent"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/tvLupaPass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="Lupa password?"
-            android:fontFamily="@font/redhatdisplay_regular"
-            android:textColor="@color/white"
-            android:textSize="8pt"/>
 
     </LinearLayout>
 
@@ -139,10 +82,10 @@
         android:layout_marginTop="32dp">
 
         <TextView
-            android:id="@+id/tvLogin"
+            android:id="@+id/tvSubmit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="LOGIN"
+            android:text="Submit"
             android:fontFamily="@font/redhatdisplay_regular"
             android:textStyle="bold"
             android:textSize="12pt"
@@ -153,20 +96,5 @@
             android:layout_marginBottom="8dp"/>
 
     </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:id="@+id/tvRegis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Belum punya akun?"
-        android:fontFamily="@font/redhatdisplay_regular"
-        android:textStyle="bold"
-        android:textSize="12pt"
-        android:textColor="@color/white"
-        android:layout_margin="32dp"
-        android:background="@drawable/rounded_outline"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
