--- a/app/src/main/res/layout/activity_personal_chat.xml
+++ b/app/src/main/res/layout/activity_personal_chat.xml
@@ -119,7 +119,7 @@
                 app:layout_constraintBottom_toBottomOf="parent">
 
                 <EditText
-                    android:layout_margin="1dp"
+                    android:layout_marginLeft="1dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Tulis sesuatu"
